--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
    },
    "homepage": "https://github.com/dhruwlalan/quick-repository#readme",
    "scripts": {
+      "prepare": "types-sync",
       "prepublishOnly": "rimraf dist && npm run build",
       "start": "babel --watch src --out-dir lib --extensions \".ts\"",
       "build": "babel src --out-dir lib --extensions \".ts\""
@@ -52,15 +53,16 @@
       "@babel/core": "^7.13.16",
       "@babel/preset-env": "^7.13.15",
       "@babel/preset-typescript": "^7.13.0",
+      "@types/configstore": "^5.0.0",
       "@types/inquirer": "^7.3.1",
+      "@types/node": "^15.0.1",
       "@types/update-notifier": "^5.0.0",
-      "@typescript-eslint/eslint-plugin": "^4.22.0",
-      "@typescript-eslint/parser": "^4.22.0",
       "eslint": "^7.24.0",
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^3.4.0",
       "prettier": "^2.2.1",
       "rimraf": "^3.0.2",
+      "types-sync": "^2.0.3",
       "typescript": "^4.2.4"
    }
 }
