--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
    },
    "devDependencies": {
       "@babel/cli": "^7.13.16",
-      "@babel/core": "^7.13.16",
-      "@babel/preset-env": "^7.13.15",
+      "@babel/core": "^7.14.2",
+      "@babel/preset-env": "^7.14.2",
       "@babel/preset-typescript": "^7.13.0",
       "@types/configstore": "^5.0.0",
       "@types/inquirer": "^7.3.1",
       "@types/node": "^15.0.1",
       "@types/update-notifier": "^5.0.0",
+      "@typescript-eslint/eslint-plugin": "^4.23.0",
+      "@typescript-eslint/parser": "^4.23.0",
       "eslint": "^7.24.0",
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-prettier": "^3.4.0",
